@@ -1,0 +1,51 @@
+/*
+ * Copyright (C) 2011 Google Inc.
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ * 1. Redistributions of source code must retain the above copyright
+ *    notice, this list of conditions and the following disclaimer.
+ * 2. Redistributions in binary form must reproduce the above copyright
+ *    notice, this list of conditions and the following disclaimer in the
+ *    documentation and/or other materials provided with the distribution.
+ *
+ * THIS SOFTWARE IS PROVIDED BY APPLE COMPUTER, INC. ``AS IS'' AND ANY
+ * EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
+ * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
+ * PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL APPLE COMPUTER, INC. OR
+ * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
+ * EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+ * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+ * PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY
+ * OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+ * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
+ * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
+ */
+
+#ifndef DragState_h
+#define DragState_h
+
+#include <wtf/Forward.h>
+#include <wtf/RefPtr.h>
+
+namespace WebCore {
+
+struct DragState {
+    WTF_MAKE_NONCOPYABLE(DragState);
+    WTF_MAKE_FAST_ALLOCATED;
+public:
+    DragState() { }
+    RefPtr<Node> m_dragSrc; // element that may be a drag source, for the current mouse gesture
+    bool m_dragSrcIsLink;
+    bool m_dragSrcIsImage;
+    bool m_dragSrcInSelection;
+    bool m_dragSrcMayBeDHTML;
+    bool m_dragSrcMayBeUA; // Are DHTML and/or the UserAgent allowed to drag out?
+    bool m_dragSrcIsDHTML;
+    RefPtr<Clipboard> m_dragClipboard; // used on only the source side of dragging
+};
+
+} // namespace WebCore
+
+#endif // DragState_h
